<resources>
    <string name="app_name">My Application</string>
    <string name="settings">My Application: Settings</string>

    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="achievements">Achievements</string>

    <string name="startbatttle">Start Battle</string>
    <string name="shop">Shop</string>

    <string name="nickname">Nickname</string>
    <string name="health">Health</string>
    <string name="armor">Armor</string>
    <string name="damage">Damage</string>
    <string name="lvl">Level</string>

    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="hello_blank_fragment4">Hello blank fragment4</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="timeStop">Остоновить таймер</string>
    <string name="instruction">Бла-Бла-Бла</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
